--- a/css/mediumclone.css
+++ b/css/mediumclone.css
@@ -1,4 +1,104 @@
+
+/*Impostazioni di default*/
+
+html{
+    font-size: 16px;
+}
+
 body{
     margin: 0;
+    width: 100vw;
     height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/*Tipografia*/
+
+h1, h2, h3, h4, h5, p, caption, a, button{
+    font-family: Helvetica;
+    line-height: auto;
+}
+
+h2{
+    font-size: 2em;
+    font-weight: bold;
+}
+
+h3{
+    font-size: 1.5em;
+    text-transform: uppercase;
+}
+
+h3:active{
+    font-weight: bold;
+}
+
+h4{
+    font-size: 1em;
+    font-weight: 600;
+}
+
+h5{
+    font-size: 1em;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
+p, .chip{
+    font-size: 1em;
+}
+
+.caption{
+    font-size: 0.6em;
+}
+
+a, .label{
+    font-size: 0.8em;
+}
+
+/*Componenti base*/
+
+button{
+background-color: none;
+  border: 1px solid black;
+  color: black;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1em;
+  text-transform: capitalize;
+}
+
+/* Macro Container*/
+
+#main{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
+#feed{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+}
+
+#aside{
+    display: flex;
+    flex-direction: column;
+    width: 40%; /*automatico, ma non si sa mai*/
+}
+
+header{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    /*justify-content: space-around;*/
+}
+
+/* Elementi dell'Header*/
+
+#logo{
+    width: 20%;
 }
