--- a/css/mediumclone.css
+++ b/css/mediumclone.css
@@ -14,7 +14,7 @@ body{
 
 /*Tipografia*/
 
-h1, h2, h3, h4, h5, p, caption, a, button{
+h1, h2, h3, h4, h5, p, .caption, a, button .chip, .label{
     font-family: Helvetica;
     line-height: auto;
 }
@@ -59,15 +59,33 @@ a, .label{
 /*Componenti base*/
 
 button{
-background-color: none;
+background-color: white;
   border: 1px solid black;
   color: black;
   padding: 8px 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 1em;
-  text-transform: capitalize;
+  font-size: 0.8em;
+  border-radius: 16px;
+}
+
+#avatarButton{
+    background-color: red;
+    border: none;
+    color: white;
+    padding: 8px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 0.8em;
+    border-radius: 50%;
+    margin-right: 1em;
+}
+
+
+#tools ion-icon{
+    font-size: 1.2em;
 }
 
 /* Macro Container*/
@@ -94,11 +112,27 @@ header{
     display: flex;
     flex-direction: row;
     width: 100%;
-    /*justify-content: space-around;*/
+    justify-content: space-around;
+    align-items: center;
+    padding: 1em 0;
+    /*position: fixed;*/
+    background-color: white;
+    box-shadow: 0px 4px 32px 0px rgba(0, 0, 0, 0.1);
 }
 
 /* Elementi dell'Header*/
 
 #logo{
-    width: 20%;
+    width: 50%;
 }
+
+#logo img{
+    width: 30%;
+}
+
+#tools{
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+
