--- a/css/mediumclone.css
+++ b/css/mediumclone.css
@@ -20,13 +20,19 @@ h1, h2, h3, h4, h5, p, .caption, a, button .chip, .label{
 }
 
 h2{
-    font-size: 2em;
+    font-size: 1.2em;
     font-weight: bold;
 }
 
 h3{
-    font-size: 1.5em;
+    font-size: 0.9em;
     text-transform: uppercase;
+    font-weight: normal;
+}
+
+h3:hover{
+    font-weight: bold;
+    cursor: pointer;
 }
 
 h3:active{
@@ -39,7 +45,7 @@ h4{
 }
 
 h5{
-    font-size: 1em;
+    font-size: 0.8em;
     font-weight: bold;
     text-transform: capitalize;
 }
@@ -49,7 +55,7 @@ p, .chip{
 }
 
 .caption{
-    font-size: 0.6em;
+    font-size: 0.8em;
 }
 
 a, .label{
@@ -90,24 +96,6 @@ background-color: white;
 
 /* Macro Container*/
 
-#main{
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-}
-
-#feed{
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-}
-
-#aside{
-    display: flex;
-    flex-direction: column;
-    width: 40%; /*automatico, ma non si sa mai*/
-}
-
 header{
     display: flex;
     flex-direction: row;
@@ -120,7 +108,38 @@ header{
     box-shadow: 0px 4px 32px 0px rgba(0, 0, 0, 0.1);
 }
 
-/* Elementi dell'Header*/
+main{
+    /*display: flex;
+    flex-direction: row;*/
+    width: 100vw;
+    height: 100%;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+}
+
+#feed{
+    /*display: flex;
+    flex-direction: column;
+    align-items: center;*/
+    width: 70%;
+    padding: 1.5em;
+    border-right: 1px solid lightgray;
+    background-color: yellow;
+}
+
+aside{
+    /*display: flex;
+    flex-direction: column;
+    align-items: center;*/
+    width: 35%;
+    padding: 1.5em;
+    background-color: red;
+}
+
+/* Header*/
 
 #logo{
     width: 50%;
@@ -135,4 +154,83 @@ header{
     align-items: center;
     gap: 1em;
 }
+
+
+/* Feed*/
+
+#categorySelectors{
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+    margin: 1em 0;
+    border-bottom: 1px solid lightgray;
+}
+
+#feedArchive{
+    padding: 1em;;
+}
+
+/* Blog Card*/
+
+.blogCard{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1em;
+    background-color: white;
+    padding: 1em;
+    margin: 1em;
+    height: 200px;
+}
+
+.articleBody{
+    width: 80%;
+}
+
+.articleSummary{
+    margin: 0 8px;
+}
+
+.articleThumbnail{
+    width: 30%;
+}
+
+.articleThumbnail img{
+    width: 100%;
+    /*height: 100%;*/
+    object-fit: cover;
+}
+
+.articleFeatures{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.articleInfo{
+    margin: 0 16px;
+}
+
+ul{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 16px
+}
+
+.blogCard .caption{
+    margin: 0;
+}
+
+
+
+
+/* Aside */
+
+#logoConnection img{
+    width: 30%;
+
+}
+
+
 
