--- a/css/mediumclone.css
+++ b/css/mediumclone.css
@@ -9,12 +9,17 @@ body{
     margin: 0;
     width: 100vw;
     height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Geist, Arial, Helvetica, sans-serif;
 }
 
 /*Tipografia*/
 
-h1, h2, h3, h4, h5, p, .caption, a, button .chip, .label{
+h1, h2, h3, h4, h5, button .chip, .label, span{
+    font-family: Geist;
+    line-height: auto;
+}
+
+p, .caption, a {
     font-family: Helvetica;
     line-height: auto;
 }
@@ -22,12 +27,14 @@ h1, h2, h3, h4, h5, p, .caption, a, button .chip, .label{
 h2{
     font-size: 1.2em;
     font-weight: bold;
+    margin: 8px 0;
 }
 
 h3{
-    font-size: 0.9em;
+    font-size: 0.8em;
     text-transform: uppercase;
     font-weight: normal;
+    padding: 0 1em;
 }
 
 h3:hover{
@@ -42,16 +49,27 @@ h3:active{
 h4{
     font-size: 1em;
     font-weight: 600;
+    margin: 0;
 }
 
 h5{
     font-size: 0.8em;
+    margin: 0;
     font-weight: bold;
     text-transform: capitalize;
 }
 
-p, .chip{
-    font-size: 1em;
+p, .chip, span{
+    font-size: 0.8em;
+    margin: 0.5em 0;
+}
+
+span{
+    font-size: .7em;
+}
+
+p, ul, span{
+    color: rgb(90, 90, 90);
 }
 
 .caption{
@@ -59,7 +77,7 @@ p, .chip{
 }
 
 a, .label{
-    font-size: 0.8em;
+    font-size: 0.7em;
 }
 
 /*Componenti base*/
@@ -68,12 +86,16 @@ button{
 background-color: white;
   border: 1px solid black;
   color: black;
-  padding: 8px 16px;
+  padding: 0.5em 1em;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 0.8em;
-  border-radius: 16px;
+  border-radius: 1em;
+}
+
+button:hover{
+    cursor: pointer;
 }
 
 #avatarButton{
@@ -89,9 +111,28 @@ background-color: white;
     margin-right: 1em;
 }
 
+#avatarButton:hover{
+    cursor: pointer;
+}
+
 
 #tools ion-icon{
     font-size: 1.2em;
+}
+
+.chip{
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 6px 10px;
+    margin: 0;
+}
+
+.chip:hover{
+    cursor: pointer;
+}
+
+ion-icon:hover{
+    cursor: pointer;
 }
 
 /* Macro Container*/
@@ -103,7 +144,7 @@ header{
     justify-content: space-around;
     align-items: center;
     padding: 1em 0;
-    /*position: fixed;*/
+    position: fixed;
     background-color: white;
     box-shadow: 0px 4px 32px 0px rgba(0, 0, 0, 0.1);
 }
@@ -118,6 +159,7 @@ main{
 .flex-container {
     display: flex;
     flex-direction: row;
+    padding-top: 64px;
 }
 
 #feed{
@@ -127,7 +169,6 @@ main{
     width: 70%;
     padding: 1.5em;
     border-right: 1px solid lightgray;
-    background-color: yellow;
 }
 
 aside{
@@ -136,7 +177,6 @@ aside{
     align-items: center;*/
     width: 35%;
     padding: 1.5em;
-    background-color: red;
 }
 
 /* Header*/
@@ -144,6 +184,10 @@ aside{
 #logo{
     width: 50%;
 }
+
+#logo:hover{
+    cursor: pointer;
+}   
 
 #logo img{
     width: 30%;
@@ -160,14 +204,14 @@ aside{
 
 #categorySelectors{
     display: flex;
-    flex-direction: row;
-    gap: 1em;
-    margin: 1em 0;
+    flex-flow: row wrap;
+    /*gap: 1em;*/
+    margin: 0 2em;
     border-bottom: 1px solid lightgray;
 }
 
 #feedArchive{
-    padding: 1em;;
+    padding: 0 1em;
 }
 
 /* Blog Card*/
@@ -177,7 +221,6 @@ aside{
     flex-direction: row;
     align-items: center;
     gap: 1em;
-    background-color: white;
     padding: 1em;
     margin: 1em;
     height: 200px;
@@ -188,17 +231,18 @@ aside{
 }
 
 .articleSummary{
-    margin: 0 8px;
+    margin: 0 0.5em;
 }
 
 .articleThumbnail{
+    object-fit: cover;
     width: 30%;
+    height: 100px;
 }
 
 .articleThumbnail img{
     width: 100%;
-    /*height: 100%;*/
-    object-fit: cover;
+    height: 100%;
 }
 
 .articleFeatures{
@@ -208,14 +252,14 @@ aside{
 }
 
 .articleInfo{
-    margin: 0 16px;
+    margin: 0 1em;
 }
 
 ul{
     padding: 0;
     margin: 0;
     display: flex;
-    gap: 16px
+    gap: 1em
 }
 
 .blogCard .caption{
@@ -224,13 +268,162 @@ ul{
 
 
 
-
 /* Aside */
 
-#logoConnection img{
+/* Connect to Twitter*/
+
+#connectTotwitter{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.8em;
+    padding: 1em;
+    margin: 0.5em 0;
+}
+
+#logoConnection{
+    display: flex;
+    align-items: center;
+    gap: 1em;
+    justify-content: center;
+}
+
+#logoConnection :first-child{
     width: 30%;
 
 }
 
+#logoConnection :last-child{
+    width: 8%;
+}
 
+#connectTotwitter p {
+    margin: 0 2,25em;
+    text-align: center;
+    color: rgb(90, 90, 90);
+}   
+
+#connectTotwitter a{
+    color: darkgrey
+}
+
+#connectButton{
+    color:rgb(90, 90, 90);
+}
+
+#connectButton img{
+    width: 1em;
+    margin-right: 0.5em;
+}
+
+/* Recommended Topics*/
+
+#recommendedTopics{
+    display: flex;
+    flex-direction: column;
+    gap: 0.8em;
+    padding: 1em;
+    margin: 1em 0;
+}
+
+#topicsChips{
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0.5em;
+    margin: 0.8em 0;
+}
+
+/* Who to follow*/
+
+#authorsTofollow{
+    display: flex;
+    flex-direction: column;
+    gap: 0.8em;
+    padding: 1em;
+    margin: 1em 0;
+}
+
+.authorBlock{
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+}
+
+.author{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5em;
+    margin: 0.8em 0;
+    justify-content: space-between;
+}
+
+.avatar{
+    width: 56px;
+    height: 56px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+/* Saved Articles*/
+
+#savedArticles{
+    display: flex;
+    flex-direction: column;
+    gap: 0.8em;
+    padding: 1em;
+    margin: 1em 0;
+}
+
+#savedArticlesList{
+    display: flex;
+    flex-direction: column;
+    gap: 0.6em;
+}
+
+/*.savedArticle{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    margin: 0.8em 0;
+}*/
+
+.savedArticle ul{
+    padding: 0.25em 0.8em;
+
+}
+
+#savedArticles a{
+    color: darkolivegreen;
+}
+
+/* Footer Links*/
+
+#footerLinks{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+    padding: 1em;
+    margin: 1em 0;
+}
+
+#footerLinks span{
+    margin: 0;
+}
+
+
+/* Background per gestione margini e padding */
+
+.blogCard, #connectTotwitter, #recommendedTopics, #authorsTofollow, #savedArticles, #footerLinks, #categorySelectors{
+    background-color: white;
+}
+
+/*aside{
+    background-color: red;
+}*/
+
+#feed{
+    background-color: yellow;
+}
 
